// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`golden report snapshots > keeps Besu-style trace JSON report structure stable 1`] = `
"{
  "toolVersion": "0.2.2",
  "fork": "glamsterdam",
  "target": {
    "kind": "trace",
    "name": "fixtures/traces/besu-debug-structlogs.json"
  },
  "summary": {
    "risk": "low",
    "findingCount": 1,
    "highCount": 0,
    "mediumCount": 0,
    "lowCount": 1,
    "unknownCount": 0
  },
  "findings": [
    {
      "id": "trace.logs-calls-visible",
      "title": "Trace includes logs or external calls",
      "severity": "low",
      "confidence": "high",
      "domain": [
        "contracts",
        "indexer",
        "monitoring"
      ],
      "relatedEips": [
        "EIP-7708",
        "EIP-7928"
      ],
      "description": "The trace includes log or call activity that may be relevant to indexer, explorer, and monitoring assumptions under Glamsterdam-era changes.",
      "evidence": [
        {
          "logOps": 1,
          "explicitLogEntries": 0,
          "callOps": 1,
          "maxDepth": 2
        }
      ],
      "recommendation": "Use traces like this to test indexer replay, alerting, and explorer display paths alongside contract gas behavior."
    }
  ],
  "assumptions": [
    "Trace input was normalized from an array of steps, a JSON-RPC result wrapper, a structLogs object, this project's normalized format, an action trace array, or a call-tracer-like calls tree.",
    "The loaded registry is dated 2026-05-08. Glamsterdam scope and gas parameters may change.",
    "Detector thresholds are dated 2026-05-09 and are MVP heuristics, not protocol gas parameters."
  ],
  "limitations": [
    "Trace coverage is only as good as the transaction samples provided.",
    "Foundry and Hardhat can emit multiple trace shapes depending on command, plugin, and verbosity; this scanner supports representative JSON-like exports, not every console rendering.",
    "Some trace formats omit calldata sizes, storage keys, gas costs, logs, or call details.",
    "Findings are compatibility prompts and should be validated through replay or benchmarking."
  ]
}
"
`;

exports[`golden report snapshots > keeps Foundry trace JSON report structure stable 1`] = `
"{
  "toolVersion": "0.2.2",
  "fork": "glamsterdam",
  "target": {
    "kind": "trace",
    "name": "fixtures/traces/foundry-json-trace.json"
  },
  "summary": {
    "risk": "medium",
    "findingCount": 2,
    "highCount": 0,
    "mediumCount": 1,
    "lowCount": 1,
    "unknownCount": 0
  },
  "findings": [
    {
      "id": "trace.contract-creation-executed",
      "title": "Trace executed contract creation",
      "severity": "medium",
      "confidence": "high",
      "domain": [
        "contracts",
        "execution"
      ],
      "relatedEips": [
        "GAS-REPRICING",
        "EIP-8037"
      ],
      "description": "The trace executed CREATE or CREATE2. This is direct evidence that this transaction class exercises state creation.",
      "evidence": [
        {
          "CREATE": 0,
          "CREATE2": 1
        }
      ],
      "recommendation": "Replay creation-heavy flows against Glamsterdam test environments and verify gas budgeting, relayer assumptions, and deployment automation."
    },
    {
      "id": "trace.logs-calls-visible",
      "title": "Trace includes logs or external calls",
      "severity": "low",
      "confidence": "high",
      "domain": [
        "contracts",
        "indexer",
        "monitoring"
      ],
      "relatedEips": [
        "EIP-7708",
        "EIP-7928"
      ],
      "description": "The trace includes log or call activity that may be relevant to indexer, explorer, and monitoring assumptions under Glamsterdam-era changes.",
      "evidence": [
        {
          "logOps": 1,
          "explicitLogEntries": 0,
          "callOps": 1,
          "maxDepth": 1
        }
      ],
      "recommendation": "Use traces like this to test indexer replay, alerting, and explorer display paths alongside contract gas behavior."
    }
  ],
  "assumptions": [
    "Trace input was normalized from an array of steps, a JSON-RPC result wrapper, a structLogs object, this project's normalized format, an action trace array, or a call-tracer-like calls tree.",
    "The loaded registry is dated 2026-05-08. Glamsterdam scope and gas parameters may change.",
    "Detector thresholds are dated 2026-05-09 and are MVP heuristics, not protocol gas parameters."
  ],
  "limitations": [
    "Trace coverage is only as good as the transaction samples provided.",
    "Foundry and Hardhat can emit multiple trace shapes depending on command, plugin, and verbosity; this scanner supports representative JSON-like exports, not every console rendering.",
    "Some trace formats omit calldata sizes, storage keys, gas costs, logs, or call details.",
    "Findings are compatibility prompts and should be validated through replay or benchmarking."
  ]
}
"
`;

exports[`golden report snapshots > keeps Hardhat trace JSON report structure stable 1`] = `
"{
  "toolVersion": "0.2.2",
  "fork": "glamsterdam",
  "target": {
    "kind": "trace",
    "name": "fixtures/traces/hardhat-debug-trace.json"
  },
  "summary": {
    "risk": "medium",
    "findingCount": 2,
    "highCount": 0,
    "mediumCount": 1,
    "lowCount": 1,
    "unknownCount": 0
  },
  "findings": [
    {
      "id": "trace.calldata-heavy-execution",
      "title": "Trace includes visible calldata-heavy execution",
      "severity": "medium",
      "confidence": "high",
      "domain": [
        "contracts",
        "execution"
      ],
      "relatedEips": [
        "GAS-REPRICING",
        "EIP-7976",
        "EIP-7904",
        "EIP-8038"
      ],
      "description": "The trace includes CALLDATACOPY or explicit calldata byte counts. Calldata repricing candidates are considered registry items, so large input paths should be tested.",
      "evidence": [
        {
          "CALLDATACOPY": 1,
          "calldataBytes": 6147
        }
      ],
      "recommendation": "Replay large-input transactions and compare gas envelopes once a Glamsterdam configuration is available."
    },
    {
      "id": "trace.logs-calls-visible",
      "title": "Trace includes logs or external calls",
      "severity": "low",
      "confidence": "high",
      "domain": [
        "contracts",
        "indexer",
        "monitoring"
      ],
      "relatedEips": [
        "EIP-7708",
        "EIP-7928"
      ],
      "description": "The trace includes log or call activity that may be relevant to indexer, explorer, and monitoring assumptions under Glamsterdam-era changes.",
      "evidence": [
        {
          "logOps": 1,
          "explicitLogEntries": 0,
          "callOps": 1,
          "maxDepth": 2
        }
      ],
      "recommendation": "Use traces like this to test indexer replay, alerting, and explorer display paths alongside contract gas behavior."
    }
  ],
  "assumptions": [
    "Trace input was normalized from an array of steps, a JSON-RPC result wrapper, a structLogs object, this project's normalized format, an action trace array, or a call-tracer-like calls tree.",
    "The loaded registry is dated 2026-05-08. Glamsterdam scope and gas parameters may change.",
    "Detector thresholds are dated 2026-05-09 and are MVP heuristics, not protocol gas parameters."
  ],
  "limitations": [
    "Trace coverage is only as good as the transaction samples provided.",
    "Foundry and Hardhat can emit multiple trace shapes depending on command, plugin, and verbosity; this scanner supports representative JSON-like exports, not every console rendering.",
    "Some trace formats omit calldata sizes, storage keys, gas costs, logs, or call details.",
    "Findings are compatibility prompts and should be validated through replay or benchmarking."
  ]
}
"
`;

exports[`golden report snapshots > keeps Nethermind-style trace JSON report structure stable 1`] = `
"{
  "toolVersion": "0.2.2",
  "fork": "glamsterdam",
  "target": {
    "kind": "trace",
    "name": "fixtures/traces/nethermind-debug-structlogs.json"
  },
  "summary": {
    "risk": "medium",
    "findingCount": 3,
    "highCount": 0,
    "mediumCount": 1,
    "lowCount": 2,
    "unknownCount": 0
  },
  "findings": [
    {
      "id": "trace.calldata-heavy-execution",
      "title": "Trace includes visible calldata-heavy execution",
      "severity": "low",
      "confidence": "high",
      "domain": [
        "contracts",
        "execution"
      ],
      "relatedEips": [
        "GAS-REPRICING",
        "EIP-7976",
        "EIP-7904",
        "EIP-8038"
      ],
      "description": "The trace includes CALLDATACOPY or explicit calldata byte counts. Calldata repricing candidates are considered registry items, so large input paths should be tested.",
      "evidence": [
        {
          "CALLDATACOPY": 1,
          "calldataBytes": 1664
        }
      ],
      "recommendation": "Replay large-input transactions and compare gas envelopes once a Glamsterdam configuration is available."
    },
    {
      "id": "trace.contract-creation-executed",
      "title": "Trace executed contract creation",
      "severity": "medium",
      "confidence": "high",
      "domain": [
        "contracts",
        "execution"
      ],
      "relatedEips": [
        "GAS-REPRICING",
        "EIP-8037"
      ],
      "description": "The trace executed CREATE or CREATE2. This is direct evidence that this transaction class exercises state creation.",
      "evidence": [
        {
          "CREATE": 1,
          "CREATE2": 0
        }
      ],
      "recommendation": "Replay creation-heavy flows against Glamsterdam test environments and verify gas budgeting, relayer assumptions, and deployment automation."
    },
    {
      "id": "trace.logs-calls-visible",
      "title": "Trace includes logs or external calls",
      "severity": "low",
      "confidence": "high",
      "domain": [
        "contracts",
        "indexer",
        "monitoring"
      ],
      "relatedEips": [
        "EIP-7708",
        "EIP-7928"
      ],
      "description": "The trace includes log or call activity that may be relevant to indexer, explorer, and monitoring assumptions under Glamsterdam-era changes.",
      "evidence": [
        {
          "logOps": 0,
          "explicitLogEntries": 0,
          "callOps": 1,
          "maxDepth": 2
        }
      ],
      "recommendation": "Use traces like this to test indexer replay, alerting, and explorer display paths alongside contract gas behavior."
    }
  ],
  "assumptions": [
    "Trace input was normalized from an array of steps, a JSON-RPC result wrapper, a structLogs object, this project's normalized format, an action trace array, or a call-tracer-like calls tree.",
    "The loaded registry is dated 2026-05-08. Glamsterdam scope and gas parameters may change.",
    "Detector thresholds are dated 2026-05-09 and are MVP heuristics, not protocol gas parameters."
  ],
  "limitations": [
    "Trace coverage is only as good as the transaction samples provided.",
    "Foundry and Hardhat can emit multiple trace shapes depending on command, plugin, and verbosity; this scanner supports representative JSON-like exports, not every console rendering.",
    "Some trace formats omit calldata sizes, storage keys, gas costs, logs, or call details.",
    "Findings are compatibility prompts and should be validated through replay or benchmarking."
  ]
}
"
`;

exports[`golden report snapshots > keeps bytecode Markdown report wording stable 1`] = `
"# Glamsterdam Compatibility Report

Target: bytecode fixtures/bytecode/storage-heavy.hex
Tool version: 0.2.2
Fork registry: glamsterdam

## Summary

Overall risk: MEDIUM
Findings: 6 total, 0 high, 3 medium, 2 low, 1 unknown

## Findings

### 1. State and account access opcodes are prominent in bytecode

Severity: MEDIUM
Confidence: medium
Domains: contracts, execution
Related EIPs: GAS-REPRICING, EIP-7904, EIP-8038, EIP-7976

This bytecode contains multiple storage, account, or hashing opcodes. Glamsterdam gas repricing candidates may change the cost profile of state-heavy execution, but static bytecode does not prove those paths are hot.

Evidence:
- {"sensitiveOpcodeCount":13,"opcodeCounts":{"SLOAD":5,"SSTORE":5,"BALANCE":1,"EXTCODESIZE":1,"EXTCODEHASH":1}}

Recommendation: Replay representative transactions and benchmark hot paths once a Glamsterdam client/devnet or local fork configuration is available.

### 2. Calldata copy opcode is present

Severity: LOW
Confidence: medium
Domains: contracts, execution
Related EIPs: GAS-REPRICING, EIP-7976, EIP-7904, EIP-8038

CALLDATACOPY appears in the bytecode. Calldata-related repricing candidates should be tested if this contract processes large calldata in production.

Evidence:
- {"CALLDATACOPY":1}

Recommendation: Add large-calldata cases to benchmarks and trace replay when final Glamsterdam parameters are known.

### 3. Contract creation opcodes are present

Severity: MEDIUM
Confidence: high
Domains: contracts, execution
Related EIPs: GAS-REPRICING, EIP-8037

CREATE or CREATE2 appears in the bytecode. State-creation repricing candidates may affect factory, clone, deployment, or account-creation-heavy paths depending on final Glamsterdam scope.

Evidence:
- {"CREATE":1,"CREATE2":1}

Recommendation: Identify representative deployment/factory transactions and add them to fork-readiness replay tests.

### 4. Storage-related opcodes appear frequently

Severity: MEDIUM
Confidence: medium
Domains: contracts, execution
Related EIPs: GAS-REPRICING, EIP-8038

This bytecode contains many storage-related opcodes. Glamsterdam gas repricing candidates may change the cost profile of storage-heavy execution.

Evidence:
- {"SLOAD":5,"SSTORE":5,"storageOps":10}

Recommendation: Replay representative storage-heavy transactions against a Glamsterdam devnet or fork configuration when available.

### 5. Log opcodes are present

Severity: LOW
Confidence: medium
Domains: contracts, indexer, monitoring
Related EIPs: EIP-7708

The bytecode can emit logs. Indexers and monitoring systems should include representative log-emitting transactions when testing Glamsterdam-era assumptions.

Evidence:
- {"LOG0":0,"LOG1":1,"LOG2":0,"LOG3":0,"LOG4":0}

Recommendation: Include log-emitting paths in trace replay and indexer regression tests, especially where native ETH transfer visibility matters.

### 6. Manual review is still required for runtime behavior

Severity: UNKNOWN
Confidence: low
Domains: contracts, execution
Related EIPs: GAS-REPRICING

The scanner found static opcode evidence, but exact fork impact depends on executed paths, calldata, storage warmness, account state, compiler output, and final Glamsterdam parameters.

Evidence:
- {"byteLength":56,"opcodeKinds":11}

Recommendation: Use this report to choose transactions for trace replay and benchmark them under current and Glamsterdam configurations.

## Assumptions

- Input was interpreted as EVM bytecode after removing whitespace and an optional 0x prefix.
- The loaded registry is dated 2026-05-08. Glamsterdam scope and gas parameters may change.
- Detector thresholds are dated 2026-05-09 and are MVP heuristics, not protocol gas parameters.

## Limitations

- Static bytecode scanning cannot determine which branches are executed in production.
- Opcode counts are not gas estimates and do not include dynamic call targets, storage keys, calldata sizes, or transaction context.
- Findings are compatibility prompts, not predictions that a contract will fail.

"
`;

exports[`golden report snapshots > keeps call-tracer tree JSON report structure stable 1`] = `
"{
  "toolVersion": "0.2.2",
  "fork": "glamsterdam",
  "target": {
    "kind": "trace",
    "name": "fixtures/traces/call-tracer-tree.json"
  },
  "summary": {
    "risk": "medium",
    "findingCount": 3,
    "highCount": 0,
    "mediumCount": 1,
    "lowCount": 1,
    "unknownCount": 1
  },
  "findings": [
    {
      "id": "trace.contract-creation-executed",
      "title": "Trace executed contract creation",
      "severity": "medium",
      "confidence": "high",
      "domain": [
        "contracts",
        "execution"
      ],
      "relatedEips": [
        "GAS-REPRICING",
        "EIP-8037"
      ],
      "description": "The trace executed CREATE or CREATE2. This is direct evidence that this transaction class exercises state creation.",
      "evidence": [
        {
          "CREATE": 0,
          "CREATE2": 1
        }
      ],
      "recommendation": "Replay creation-heavy flows against Glamsterdam test environments and verify gas budgeting, relayer assumptions, and deployment automation."
    },
    {
      "id": "trace.logs-calls-visible",
      "title": "Trace includes logs or external calls",
      "severity": "low",
      "confidence": "high",
      "domain": [
        "contracts",
        "indexer",
        "monitoring"
      ],
      "relatedEips": [
        "EIP-7708",
        "EIP-7928"
      ],
      "description": "The trace includes log or call activity that may be relevant to indexer, explorer, and monitoring assumptions under Glamsterdam-era changes.",
      "evidence": [
        {
          "logOps": 0,
          "explicitLogEntries": 1,
          "callOps": 3,
          "maxDepth": 2
        }
      ],
      "recommendation": "Use traces like this to test indexer replay, alerting, and explorer display paths alongside contract gas behavior."
    },
    {
      "id": "trace.partial-evidence",
      "title": "Trace omits some useful compatibility evidence",
      "severity": "unknown",
      "confidence": "low",
      "domain": [
        "contracts",
        "execution"
      ],
      "relatedEips": [
        "GAS-REPRICING",
        "EIP-7976"
      ],
      "description": "The trace was usable, but some formats omit calldata byte counts or per-op gas costs. The scanner reports what it can see and avoids inferring missing data.",
      "evidence": [
        {
          "hasCalldataEvidence": true,
          "hasGasCostEvidence": false,
          "warnings": []
        }
      ],
      "recommendation": "Prefer traces that include executed opcodes, depth, calldata/input sizes, and gas costs when comparing current and Glamsterdam behavior."
    }
  ],
  "assumptions": [
    "Trace input was normalized from an array of steps, a JSON-RPC result wrapper, a structLogs object, this project's normalized format, an action trace array, or a call-tracer-like calls tree.",
    "The loaded registry is dated 2026-05-08. Glamsterdam scope and gas parameters may change.",
    "Detector thresholds are dated 2026-05-09 and are MVP heuristics, not protocol gas parameters."
  ],
  "limitations": [
    "Trace coverage is only as good as the transaction samples provided.",
    "Foundry and Hardhat can emit multiple trace shapes depending on command, plugin, and verbosity; this scanner supports representative JSON-like exports, not every console rendering.",
    "Some trace formats omit calldata sizes, storage keys, gas costs, logs, or call details.",
    "Findings are compatibility prompts and should be validated through replay or benchmarking."
  ]
}
"
`;

exports[`golden report snapshots > keeps geth structLogs JSON report structure stable 1`] = `
"{
  "toolVersion": "0.2.2",
  "fork": "glamsterdam",
  "target": {
    "kind": "trace",
    "name": "fixtures/traces/geth-json-rpc-structlogs.json"
  },
  "summary": {
    "risk": "low",
    "findingCount": 2,
    "highCount": 0,
    "mediumCount": 0,
    "lowCount": 2,
    "unknownCount": 0
  },
  "findings": [
    {
      "id": "trace.calldata-heavy-execution",
      "title": "Trace includes visible calldata-heavy execution",
      "severity": "low",
      "confidence": "high",
      "domain": [
        "contracts",
        "execution"
      ],
      "relatedEips": [
        "GAS-REPRICING",
        "EIP-7976",
        "EIP-7904",
        "EIP-8038"
      ],
      "description": "The trace includes CALLDATACOPY or explicit calldata byte counts. Calldata repricing candidates are considered registry items, so large input paths should be tested.",
      "evidence": [
        {
          "CALLDATACOPY": 1,
          "calldataBytes": 512
        }
      ],
      "recommendation": "Replay large-input transactions and compare gas envelopes once a Glamsterdam configuration is available."
    },
    {
      "id": "trace.logs-calls-visible",
      "title": "Trace includes logs or external calls",
      "severity": "low",
      "confidence": "high",
      "domain": [
        "contracts",
        "indexer",
        "monitoring"
      ],
      "relatedEips": [
        "EIP-7708",
        "EIP-7928"
      ],
      "description": "The trace includes log or call activity that may be relevant to indexer, explorer, and monitoring assumptions under Glamsterdam-era changes.",
      "evidence": [
        {
          "logOps": 1,
          "explicitLogEntries": 0,
          "callOps": 0,
          "maxDepth": 1
        }
      ],
      "recommendation": "Use traces like this to test indexer replay, alerting, and explorer display paths alongside contract gas behavior."
    }
  ],
  "assumptions": [
    "Trace input was normalized from an array of steps, a JSON-RPC result wrapper, a structLogs object, this project's normalized format, an action trace array, or a call-tracer-like calls tree.",
    "The loaded registry is dated 2026-05-08. Glamsterdam scope and gas parameters may change.",
    "Detector thresholds are dated 2026-05-09 and are MVP heuristics, not protocol gas parameters."
  ],
  "limitations": [
    "Trace coverage is only as good as the transaction samples provided.",
    "Foundry and Hardhat can emit multiple trace shapes depending on command, plugin, and verbosity; this scanner supports representative JSON-like exports, not every console rendering.",
    "Some trace formats omit calldata sizes, storage keys, gas costs, logs, or call details.",
    "Findings are compatibility prompts and should be validated through replay or benchmarking."
  ]
}
"
`;

exports[`golden report snapshots > keeps real dRPC call-tracer JSON report structure stable 1`] = `
"{
  "toolVersion": "0.2.2",
  "fork": "glamsterdam",
  "target": {
    "kind": "trace",
    "name": "fixtures/traces/drpc-call-tracer-real.json"
  },
  "summary": {
    "risk": "medium",
    "findingCount": 3,
    "highCount": 0,
    "mediumCount": 1,
    "lowCount": 1,
    "unknownCount": 1
  },
  "findings": [
    {
      "id": "trace.calldata-heavy-execution",
      "title": "Trace includes visible calldata-heavy execution",
      "severity": "medium",
      "confidence": "high",
      "domain": [
        "contracts",
        "execution"
      ],
      "relatedEips": [
        "GAS-REPRICING",
        "EIP-7976",
        "EIP-7904",
        "EIP-8038"
      ],
      "description": "The trace includes CALLDATACOPY or explicit calldata byte counts. Calldata repricing candidates are considered registry items, so large input paths should be tested.",
      "evidence": [
        {
          "CALLDATACOPY": 0,
          "calldataBytes": 4776
        }
      ],
      "recommendation": "Replay large-input transactions and compare gas envelopes once a Glamsterdam configuration is available."
    },
    {
      "id": "trace.logs-calls-visible",
      "title": "Trace includes logs or external calls",
      "severity": "low",
      "confidence": "high",
      "domain": [
        "contracts",
        "indexer",
        "monitoring"
      ],
      "relatedEips": [
        "EIP-7708",
        "EIP-7928"
      ],
      "description": "The trace includes log or call activity that may be relevant to indexer, explorer, and monitoring assumptions under Glamsterdam-era changes.",
      "evidence": [
        {
          "logOps": 0,
          "explicitLogEntries": 0,
          "callOps": 36,
          "maxDepth": 5
        }
      ],
      "recommendation": "Use traces like this to test indexer replay, alerting, and explorer display paths alongside contract gas behavior."
    },
    {
      "id": "trace.partial-evidence",
      "title": "Trace omits some useful compatibility evidence",
      "severity": "unknown",
      "confidence": "low",
      "domain": [
        "contracts",
        "execution"
      ],
      "relatedEips": [
        "GAS-REPRICING",
        "EIP-7976"
      ],
      "description": "The trace was usable, but some formats omit calldata byte counts or per-op gas costs. The scanner reports what it can see and avoids inferring missing data.",
      "evidence": [
        {
          "hasCalldataEvidence": true,
          "hasGasCostEvidence": false,
          "warnings": [
            "Unwrapped JSON-RPC result object."
          ]
        }
      ],
      "recommendation": "Prefer traces that include executed opcodes, depth, calldata/input sizes, and gas costs when comparing current and Glamsterdam behavior."
    }
  ],
  "assumptions": [
    "Trace input was normalized from an array of steps, a JSON-RPC result wrapper, a structLogs object, this project's normalized format, an action trace array, or a call-tracer-like calls tree.",
    "The loaded registry is dated 2026-05-08. Glamsterdam scope and gas parameters may change.",
    "Detector thresholds are dated 2026-05-09 and are MVP heuristics, not protocol gas parameters."
  ],
  "limitations": [
    "Trace coverage is only as good as the transaction samples provided.",
    "Foundry and Hardhat can emit multiple trace shapes depending on command, plugin, and verbosity; this scanner supports representative JSON-like exports, not every console rendering.",
    "Some trace formats omit calldata sizes, storage keys, gas costs, logs, or call details.",
    "Findings are compatibility prompts and should be validated through replay or benchmarking."
  ]
}
"
`;

exports[`golden report snapshots > keeps trace JSON report structure stable 1`] = `
"{
  "toolVersion": "0.2.2",
  "fork": "glamsterdam",
  "target": {
    "kind": "trace",
    "name": "fixtures/traces/storage-heavy-trace.json"
  },
  "summary": {
    "risk": "medium",
    "findingCount": 5,
    "highCount": 0,
    "mediumCount": 3,
    "lowCount": 1,
    "unknownCount": 1
  },
  "findings": [
    {
      "id": "trace.state-heavy-execution-medium",
      "title": "Trace shows state-heavy execution",
      "severity": "medium",
      "confidence": "high",
      "domain": [
        "contracts",
        "execution"
      ],
      "relatedEips": [
        "GAS-REPRICING",
        "EIP-7904",
        "EIP-8038",
        "EIP-7976"
      ],
      "description": "The executed trace includes repeated storage or state/account access operations. Glamsterdam repricing candidates may affect this cost profile, depending on final fork scope.",
      "evidence": [
        {
          "storageOps": 12,
          "sensitiveOpcodeCount": 12,
          "opcodeCounts": {
            "SLOAD": 6,
            "SSTORE": 6
          }
        }
      ],
      "recommendation": "Keep this trace as a regression fixture and replay it when final Glamsterdam client configurations are available."
    },
    {
      "id": "trace.calldata-heavy-execution",
      "title": "Trace includes visible calldata-heavy execution",
      "severity": "medium",
      "confidence": "high",
      "domain": [
        "contracts",
        "execution"
      ],
      "relatedEips": [
        "GAS-REPRICING",
        "EIP-7976",
        "EIP-7904",
        "EIP-8038"
      ],
      "description": "The trace includes CALLDATACOPY or explicit calldata byte counts. Calldata repricing candidates are considered registry items, so large input paths should be tested.",
      "evidence": [
        {
          "CALLDATACOPY": 1,
          "calldataBytes": 8704
        }
      ],
      "recommendation": "Replay large-input transactions and compare gas envelopes once a Glamsterdam configuration is available."
    },
    {
      "id": "trace.contract-creation-executed",
      "title": "Trace executed contract creation",
      "severity": "medium",
      "confidence": "high",
      "domain": [
        "contracts",
        "execution"
      ],
      "relatedEips": [
        "GAS-REPRICING",
        "EIP-8037"
      ],
      "description": "The trace executed CREATE or CREATE2. This is direct evidence that this transaction class exercises state creation.",
      "evidence": [
        {
          "CREATE": 0,
          "CREATE2": 1
        }
      ],
      "recommendation": "Replay creation-heavy flows against Glamsterdam test environments and verify gas budgeting, relayer assumptions, and deployment automation."
    },
    {
      "id": "trace.logs-calls-visible",
      "title": "Trace includes logs or external calls",
      "severity": "low",
      "confidence": "high",
      "domain": [
        "contracts",
        "indexer",
        "monitoring"
      ],
      "relatedEips": [
        "EIP-7708",
        "EIP-7928"
      ],
      "description": "The trace includes log or call activity that may be relevant to indexer, explorer, and monitoring assumptions under Glamsterdam-era changes.",
      "evidence": [
        {
          "logOps": 1,
          "explicitLogEntries": 0,
          "callOps": 1,
          "maxDepth": 2
        }
      ],
      "recommendation": "Use traces like this to test indexer replay, alerting, and explorer display paths alongside contract gas behavior."
    },
    {
      "id": "trace.partial-evidence",
      "title": "Trace omits some useful compatibility evidence",
      "severity": "unknown",
      "confidence": "low",
      "domain": [
        "contracts",
        "execution"
      ],
      "relatedEips": [
        "GAS-REPRICING",
        "EIP-7976"
      ],
      "description": "The trace was usable, but some formats omit calldata byte counts or per-op gas costs. The scanner reports what it can see and avoids inferring missing data.",
      "evidence": [
        {
          "hasCalldataEvidence": true,
          "hasGasCostEvidence": false,
          "warnings": []
        }
      ],
      "recommendation": "Prefer traces that include executed opcodes, depth, calldata/input sizes, and gas costs when comparing current and Glamsterdam behavior."
    }
  ],
  "assumptions": [
    "Trace input was normalized from an array of steps, a JSON-RPC result wrapper, a structLogs object, this project's normalized format, an action trace array, or a call-tracer-like calls tree.",
    "The loaded registry is dated 2026-05-08. Glamsterdam scope and gas parameters may change.",
    "Detector thresholds are dated 2026-05-09 and are MVP heuristics, not protocol gas parameters."
  ],
  "limitations": [
    "Trace coverage is only as good as the transaction samples provided.",
    "Foundry and Hardhat can emit multiple trace shapes depending on command, plugin, and verbosity; this scanner supports representative JSON-like exports, not every console rendering.",
    "Some trace formats omit calldata sizes, storage keys, gas costs, logs, or call details.",
    "Findings are compatibility prompts and should be validated through replay or benchmarking."
  ]
}
"
`;
